--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "simple-gini",
-  "version": "1.0.0",
-  "description":
-    "Calculates the inequality of a list of integers by the GINI index principle (discretely). See (http://shlegeris.com/gini)",
+  "version": "1.0.2",
+  "description": "Calculates the inequality of a list of integers by the GINI index principle (discretely). See (http://shlegeris.com/gini)",
   "main": "index.js",
   "repository": "git@github.com:Fabs/simple-gini.git",
   "author": "Fabs",
   "license": "MIT",
   "private": false,
+  "files": ["output"],
   "devDependencies": {
     "bower": "^1.8.4",
     "jest": "^22.4.3",
